Fix page side spacing

--- a/components/header/_index.scss
+++ b/components/header/_index.scss
@@ -3,8 +3,8 @@
 
 ._header {
     position: absolute;
-    left: 20px;
-    right: 20px;
+    left: 40px;
+    right: 40px;
     top: 0px;
     z-index: 40;
 
